# kdl-menzi

./: CMakeLists.txt  README.md  excavator_truck.urdf  menzi_muck.urdf  model.urdf  package.xml
src/: kdl_menzi.cpp  kdl_menzi_param.cpp
